--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <div class="sfondo">
         <div class="copertina">
-            <img src="immaginicopertinafigma.png" alt="">
+            <img src="immagini/copertinafigma.png" alt="">
         </div>
         <div class="text">
             <h1>BOTANIC WAR</h1>
@@ -29,7 +29,7 @@
             <div class="contenitore">
                     <h2>Visione strategica</h2>
                 <div class="foglie">
-                    <img class="piccole immagini" src="immaginifigma1.png" alt="">
+                    <img class="piccole immagini" src="immagini/figma1.png" alt="">
                 </div>
                 <div class="testo">
                     <p>La divulgazione scientifica cerca di rendere accessibile la conoscenza, ma semplificare senza perdere accuratezza è una sfida. Il divulgatore deve scegliere se privilegiare la chiarezza o la fedeltà ai dettagli scientifici.</p>
@@ -43,7 +43,7 @@
             <div class="contenitore">
                 <h3>Sostenibilità</h3>
                 <div class="foglie">
-                    <img class="piccole immagini" src="immaginifigma2.png" alt="">
+                    <img class="piccole immagini" src="immagini/figma2.png" alt="">
                 </div>
             <div class="testo">
                 <p>Stefano Mancuso è un divulgatore che ha reso popolare la botanica con idee ambiziose e progetti innovativi. Tuttavia, alcuni lo accusano di eccessiva semplificazione o di proporre soluzioni poco realistiche come il progetto dei mille miliardi di alberi. Il suo approccio solleva interrogativi
@@ -58,7 +58,7 @@
           <div class="contenitore">
             <h4>Centralità</h4>
             <div class="foglie">
-                <img class="piccole immagini" src="immaginifigma3.png" alt="">
+                <img class="piccole immagini" src="immagini/figma3.png" alt="">
             </div>
             <div class="testo">
                 <p>La divulgazione deve rispettare la complessità della scienza senza rinunciare a coinvolgere. 
@@ -68,7 +68,7 @@
         </div>
     </section>
     <footer>
-        <img src="immaginiretrofigma.png" alt="">
+        <img src="immagini/retrofigma.png" alt="">
         <div class="finetesto">
             <p>Luigi Torreggiani</p>
         </div>
