--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
     </div>
     <section>
-        <div class="flex">
-            <div class="contenitore">
-                    <h2>Visione strategica</h2>
+        <div class="contenitore">
+            <h2>Visione strategica</h2>
+            <div class="flex">
                 <div class="foglie">
                     <img class="piccole immagini" src="immagini/figma1.png" alt="">
                 </div>
@@ -39,9 +39,9 @@
     </section>
 
     <section>
-        <div class="flex">
-            <div class="contenitore">
-                <h3>Sostenibilità</h3>
+        <div class="contenitore">
+            <h3>Sostenibilità</h3>
+            <div class="flex">
                 <div class="foglie">
                     <img class="piccole immagini" src="immagini/figma2.png" alt="">
                 </div>
@@ -54,9 +54,9 @@
     </section>
 
     <section>
-        <div class="testo">
-          <div class="contenitore">
+        <div class="contenitore">
             <h4>Centralità</h4>
+          <div class="flex">
             <div class="foglie">
                 <img class="piccole immagini" src="immagini/figma3.png" alt="">
             </div>
@@ -68,9 +68,13 @@
         </div>
     </section>
     <footer>
-        <img src="immagini/retrofigma.png" alt="">
-        <div class="finetesto">
-            <p>Luigi Torreggiani</p>
+        <div class="sfondofooter">
+            <div class="imgfooter">
+                <img src="immagini/retrofigma.png" alt="">
+            </div>
+            <div class="finetesto">
+                <p>Luigi Torreggiani</p>
+            </div>
         </div>
     </footer>
 </body>
